src/objects/Product_Participants__c.object
<CustomObject>
    <fields>
        <fullName>DOI__c</fullName>
        <label>DOI</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital_Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>N_DOI__c</fullName>
        <label>N_DOI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Product_Participants</relationshipLabel>
        <relationshipName>Product_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participation__c</fullName>
        <label>Participation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product_Participants</relationshipLabel>
        <relationshipName>Product_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product_Participant</label>
    <nameField>
        <label>Nombre de Product_Participants</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product_Participants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>